--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "@types/node": "12.7.11",
     "@types/react": "^16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.4",
     "@types/react-router-dom": "^5.1.0",
     "history": "^4.10.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.0",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.0",
     "typescript": "3.6.3"
   },
